--- a/sites/all/themes/dilatoit/css/dilatoit.css
+++ b/sites/all/themes/dilatoit/css/dilatoit.css
@@ -4,12 +4,28 @@ body {
   background: url("../images/body-bottom.png") bottom repeat-x;
   padding-bottom: 80px;
 }
+
+#main-wrapper {
+  min-height: 600px;
+  height: auto !important;
+  height: 600px;
+}
 #navigation {
   overflow: visible;
   border-bottom: 1px solid #6c6c6c;
+  width: 140%;
+  margin-left: -20%;
+  margin-right: -120%;
+}
+#navigation .section {
+  width: 960px;
+  margin: 0 auto;
+}
+#navigation .nice-menu li {
+  margin-left: 20px;
 }
 .with-navigation #content, .with-navigation .region-sidebar-first, .with-navigation .region-sidebar-second {
-    margin-top: 2.4em;
+  margin-top: 2.4em;
 }
 #block-nice_menus-1 {
   margin: 0;
