--- a/sites/all/themes/dilatoit/css/html-reset.css
+++ b/sites/all/themes/dilatoit/css/html-reset.css
@@ -77,7 +77,7 @@ fieldset {
 
    */
 
-  font-family: Arial, Helvetica, "Nimbus Sans L", sans-serif;
+  font-family: Verdana, Tahoma, "DejaVu Sans", sans-serif;
 }
 
 pre,
