change style of footer

--- a/sites/all/themes/dilatoit/css/dilatoit.css
+++ b/sites/all/themes/dilatoit/css/dilatoit.css
@@ -2,7 +2,11 @@
 
 body {
   background: url("../images/body-bottom.png") bottom repeat-x;
-  padding-bottom: 80px;
+}
+#footer {
+  height: 80px;
+  line-height: 80px;
+  text-align: center;
 }
 
 #main-wrapper {
