--- a/sites/all/themes/dilatoit/css/layout-fixed.css
+++ b/sites/all/themes/dilatoit/css/layout-fixed.css
@@ -29,9 +29,11 @@ body {
    * this is the standards-compliant way to do that. See also the ie6.css file
    * for the necessary IE5/IE6quirks hack to center a div.
    */
+  /*
   margin-left: auto;
   margin-right: auto;
   width: 960px;
+  */
 }
 
 #page {
