change menu style

--- a/sites/all/themes/dilatoit/css/dilatoit.css
+++ b/sites/all/themes/dilatoit/css/dilatoit.css
@@ -110,7 +110,7 @@ ul.nice-menu ul ul li {
   float: right;
 }
 ul.nice-menu li a { 
-  color: #0b6dea; 
+  color: #267bb1; 
 }
 ul.nice-menu,
 ul.nice-menu ul,
