--- a/sites/all/themes/dilatoit/css/dilatoit.css
+++ b/sites/all/themes/dilatoit/css/dilatoit.css
@@ -13,7 +13,9 @@ a {
 a:hover {
   text-decoration: underline;
 }
-
+h1.title {
+  margin-bottom: 0.5em;
+}
 #header {
   position: relative;
   height: 40px;
@@ -44,14 +46,15 @@ a:hover {
   text-align: center;
   background: #f3f3f5;
 }
-  #footer-message {
-    font-size: 11px;
-  }
+#footer-message {
+  font-size: 11px;
+}
 
 #main-wrapper {
   min-height: 280px;
   height: auto !important;
   height: 280px;
+  margin-top: -30px;
 }
 #navigation {
   overflow: visible;
@@ -71,10 +74,10 @@ a:hover {
   width: auto;
 }
 ul.nice-menu ul li {
-  width: 14em;
+  width: 16em;
 }
 ul.nice-menu-down li ul li ul {
-  left: 14.5em;
+  left: 16.5em;
 }
 ul.nice-menu ul ul li {
   width: 20em;
@@ -163,8 +166,8 @@ ul.nice-menu-down li li.menuparent:hover {
 }
 
 /* Front Page Style */
-.page-node-25 h1.title,
-.page-node-9 h1.title,
+.page-services h1.title,
+.page-solutions h1.title,
 .front h1.title {
   display: none;
 }
@@ -197,7 +200,7 @@ ul.nice-menu-down li li.menuparent:hover {
   background: #fefefe;
   border: 1px solid #ddd;
   border-radius: 10px;
-  margin-top: -180px;
+  margin-top: -160px;
 }
 
 .homepage-content {
@@ -276,4 +279,17 @@ ul.nice-menu-down li li.menuparent:hover {
 	box-shadow: 0px 0px 3px rgba(255,255,255,0.75);
 	-webkit-box-shadow: 0 0 3px rgba(255, 255, 255, 0.75);
 	-moz-box-shadow: 0 0 3px rgba(255, 255, 255, 0.5);
+}
+
+/* Partners Style */
+
+#partners li {
+ display: table-cell;
+}
+#partners .logo {
+  width: 300px;
+  vertical-align: middle;
+}
+#partners .description {
+  width: 600px;
 }
