--- a/sites/all/themes/dilatoit/css/dilatoit.css
+++ b/sites/all/themes/dilatoit/css/dilatoit.css
@@ -65,6 +65,7 @@ h1.title {
 #navigation {
   overflow: visible;
   border-bottom: 1px solid #6c6c6c;
+  *float:none;
 }
 #navigation .section {
   width: 960px;
@@ -185,8 +186,20 @@ ul.nice-menu-down li li.menuparent:hover {
 }
 .views-slideshow-controls-bottom {
   text-align: center;
+  *margin:0 auto;
+  *width:100px;
 }
-
+/* Page Type title Style */
+.page h1.title {
+  background-color:#8DD8F8;
+  padding:0px 15px;
+}
+.page .breadcrumb {
+  width:930px;
+}
+.page #content-area {
+  padding:0px 15px;
+}
 /* Front Page Style */
 .page-services h1.title,
 .page-solutions h1.title,
@@ -289,6 +302,7 @@ ul.nice-menu-down li li.menuparent:hover {
   display: inline-block;
   padding: 5px;
   margin-bottom: 15px;
+  *float:left;
 }
 .view-slideshow .pager-item a {
   background: #fff;
@@ -302,6 +316,7 @@ ul.nice-menu-down li li.menuparent:hover {
 	box-shadow: inset 0px 1px 3px #959595;
 	-webkit-box-shadow: inset 0px 1px 3px #959595;
 	-moz-box-shadow: inset 0px 1px 3px #959595;
+  *background-color:#959595;
 }
 .view-slideshow .pager-item a:hover {
 	background: #267bb1;
